tests/transpiler/x/php/map_in_operator.php
<?php
$m = [1 => "a", 2 => "b"];
echo (1 in $m ? "true" : "false"), PHP_EOL;
echo (3 in $m ? "true" : "false"), PHP_EOL;
?>
